Fix header layout issue

--- a/assets/styles/scaffolding/_themes.scss
+++ b/assets/styles/scaffolding/_themes.scss
@@ -23,3 +23,7 @@
 .theme-green {
   background-color: $color-green-2;
 }
+
+.theme-black {
+  background-color: $black;
+}
